[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main Scenes/Battle/Main/BattleUI/BottomBar/SkillBar/SkillButton.gd" type="Script" id=1]

[node name="SkillButton" type="Control"]
anchor_right = 0.078
anchor_bottom = 0.139
margin_right = 0.23999
margin_bottom = -0.12001
rect_min_size = Vector2( 150, 150 )
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 150.0
margin_bottom = 150.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
z_index = 1

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 0, 0, 150, 0, 150, 150, 0, 150 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
